add icon search

--- a/index.html
+++ b/index.html
@@ -51,8 +51,13 @@
                     <div class="left-two">Body</div>
                 </div>
                 <div id="sort-head-right">
-                    <input style="width: 240px; height: 50px;" type="text" placeholder="Search product...">
-                    <button style="width: 135px;height: 55px; margin-left: 15px;">Sort by</button>
+                    <button id="sort-btn"><i class="fa-solid fa-magnifying-glass"></i></button>
+                    <input style="width: 240px; height: 50px;" id="sort-text" type="text" placeholder="Search product...">
+                    <div id="sort-by">
+                    <button style="width: 120px;height: 50px; margin-left: 15px;" id="sort-by-right" >Sort by</button>
+                    <button id="sort-by-btn"><i class="fa-solid fa-arrow-up-short-wide"></i></button>
+                    </div>
+                    
                 </div>
             </div>
             <div id="sort-center">
@@ -347,6 +352,7 @@
                 <div class="border-right">
                     <div><b style="font-size: 30px;color: rgba(240, 248, 255, 0.903);">Receive new promotions</b></div>
                     <div style="font-size: 23px;margin-top: 15px;color: rgba(255, 255, 255, 0.675);">Duis ea tempor commodo amet reperhende</div>
+                    <button id="email-btn"><i class="fa-regular fa-envelope"></i></button>
                     <div><p style="margin-top: 15px;"  ><input style="font-size: 20px;" class="sub"type="text" placeholder="Input your email"><button class="but-sub">Subscribe</button></p></div>
                     <div>
                         <img style="width: 26px;height: 24px;margin-right: 5px;margin-top: 15px;" src="image/Twitter 1.png" alt="">
